--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "discord.js": "^13.8.1",
     "dotenv": "^16.0.1",
-    "node-twitch": "^0.4.5"
+    "node-twitch": "^0.4.5",
+    "ytdl-core": "^4.11.2"
   }
 }
